--- a/src/bundle/Resources/config/services.yml
+++ b/src/bundle/Resources/config/services.yml
@@ -12,5 +12,6 @@ services:
             - "@ezpublish.api.service.user"
             - "@ezpublish.api.repository"
             - "@ezrepoforms.action_dispatcher.user"
+            - '@ezpublish.urlalias_generator'
             - '@session'
             - '@translator'
